<resources>
    <string name="app_name">CynoClient</string>
    <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
    <string name="navigation_drawer_close">Fermer le menu de navigation</string>
    <string name="nav_header_title">What The Dog</string>
    <string name="nav_header_subtitle">info@whatthedog.ch</string>
    <string name="nav_header_desc">Logo What The Dog</string>
    <string name="action_settings">Settings</string>

    <string name="menu_clients">Gérer les clients</string>
    <string name="menu_dogs">Gérer les chiens</string>
    <string name="menu_plans">Gérer les consultations</string>
    <string name="menu_locations">Gérer les lieux</string>
    <string name="light_mode">Mode Jour</string>
    <string name="dark_mode">Mode Nuit</string>
    <string name="content_description_light_mode">Changer vers le mode jour</string>
    <string name="content_description_dark_mode">Changer vers le mode nuit</string>

    <string name="nav_footer_dogs">Chiens</string>
    <string name="nav_footer_home">Home</string>
    <string name="nav_footer_clients">Clients</string>

    <string name="menu_manage_clients">Gérer les clients</string>
    <string name="menu_manage_dogs">Gérer les chiens</string>
    <string name="add_dogs">Ajouter un chien</string>

    <!-- string for form_create_dog -->
    <string name="form_create_dog">Créer un chien</string>
    <string name="button_create_dog">Créer le chien</string>
    <string name="form_create_dog_text_races">Races</string>
    <string name="form_create_dog_text_clients">Clients</string>
    <string name="form_create_dog_text_name">Nom du chien</string>
    <string name="form_create_dog_input_name">Nom du chien</string>
    <string name="form_create_dog_radio_male">Male</string>
    <string name="form_create_dog_radio_female">Femelle</string>
    <string name="form_create_dog_text_birthdate">Date de naissance</string>
    <string name="form_create_dog_input_birthdate">Date de naissance</string>
    <string name="form_create_dog_checkbox_sterilized">Stérilizé</string>
    <string name="form_create_dog_checkbox_chemical">Chemical</string>
    <string name="form_create_dog_text_color">Couleur du chien</string>
    <string name="form_create_dog_input_color">Couleur du chien</string>
    <string name="form_create_dog_checkbox_is_dead">Mort ?</string>

</resources>