<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_footer_home"/>
        <item
            android:id="@+id/nav_manage_clients"
            android:icon="@drawable/ic_manage"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_manage_dogs"
            android:icon="@drawable/ic_manage"
            android:title="@string/menu_dogs" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_manage"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_manage"
            android:title="@string/menu_plans" />
    </group>
</menu>