<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_page">

    <fragment
        android:id="@+id/nav_manage_clients"
        android:name="ch.leytto.cynoclient.ui.manage_client.ClientFragment"
        android:label="@string/menu_manage_clients"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_manage_dogs"
        android:name="ch.leytto.cynoclient.ui.manage_dogs.DogsFragment"
        android:label="@string/menu_manage_dogs"
        tools:layout="@layout/fragment_manage_dogs" />

    <fragment
        android:id="@+id/nav_home_page"
        android:name="ch.leytto.cynoclient.ui.homepage.HomeFragment"
        android:label="@string/nav_footer_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dogs"
        android:name="ch.leytto.cynoclient.ui.dogs.DogsFragment"
        android:label="@string/nav_footer_home"
        tools:layout="@layout/fragment_dogs" />

    <fragment
        android:id="@+id/form_create_dog"
        android:name="ch.leytto.cynoclient.ui.form_create_dog.FormCreateDogFragment"
        android:label="@string/form_create_dog"
        tools:layout="@layout/fragment_form_create_dog" />
</navigation>