<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".ui.form_create_dog.FormCreateDogFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_breeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_create_dog_text_races" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintHeight_max="200dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_view_breeds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintHeight_max="100dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text_view_clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_create_dog_text_clients" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintHeight_max="200dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_view_clients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintHeight_max="100dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_dog_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/form_create_dog_input_name"
                    android:textColor="?attr/colorPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="@string/form_create_dog_input_birthdate"
                    android:textColor="?attr/colorPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_dog_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/form_create_dog_input_color"
                    android:textColor="?attr/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
            android:id="@+id/radio_dog_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_create_dog_radio_male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_create_dog_radio_female" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/checkbox_sterilized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_create_dog_checkbox_sterilized" />

            <CheckBox
                android:id="@+id/checkbox_chemical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_create_dog_checkbox_chemical" />

            <Button
                android:id="@+id/button_create_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_create_dog"
                android:layout_marginBottom="1000dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>